--- a/Files/Tribute Page.html
+++ b/Files/Tribute Page.html
@@ -9,6 +9,8 @@
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="trubute.css">
+     <!-- for Mobile -->
+     <link rel="stylesheet" media="screen and (max-width: 768px)" href="mobile.css">
      <title>Narendra Modi</title>
 </head>
 
