--- a/index.html
+++ b/index.html
@@ -44,6 +44,23 @@
                font-weight: 400;
                margin-bottom: 1rem;
           }
+
+          /* For mobiles */
+          @media only screen and (max-width: 600px) {
+               .projects .project .project-title {
+                    font-size: 2rem;
+               }
+
+               .projects .project .project-description {
+                    font-size: 1rem;
+               }
+
+               .projects .project .project-link {
+                    font-size: 1rem;
+               }
+          }
+
+ 
      </style>
      <title>All Projects</title>
 </head>
