login page frontend added

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                     <a class="project-link" href="/Files/TributePage/Tribute Page.html">View Project</a>
                </div>
                <div class="project">
-                    <h2 class="project-title ">Project 2</h2>
+                    <h2 class="project-title ">Login Page</h2>
                     <p>Project 2 description</p>
-                    <a class="project-link" href="/Files/Project 2.html">View Project</a>
+                    <a class="project-link" href="/Files/LoginPage/index.html">View Project</a>
                </div>
                <div class="project">
                     <h2 class="project-title ">Project 3</h2>
