--- a/Files/LoginPage/forget.html
+++ b/Files/LoginPage/forget.html
@@ -6,7 +6,7 @@
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="style.css">
-     <title>xPro | Login</title>
+     <title>xPro | Forgot Password</title>
 </head>
 
 <body>
@@ -16,16 +16,20 @@
                     <img id="sunnyImg" src="assets/sunny.jpg" alt="xPro Industries">
                </div>
                <div class="right">
-                    <p class="text2">Login Here</p>
+                    <p class="text2">Forget Password</p>
                     <form action="login.php" method="POST">
-                         <input class="ifield" type="text" name="username" placeholder="Username" required><br>
-                         <input class="ifield" type="password" name="password" placeholder="Password" required>
-                         <input class="btn" type="submit" name="submit" value="Login">
+                         <input class="ifield" type="email" name="email" placeholder="Email" required><br>
+                         <input class="ifield" type="text" name="phone" placeholder="Phone Number" required><br>
+                         <input class="ifield" type="password" name="password" placeholder="Password" required><br>
+                         <input class="ifield" type="password" name="cpassword" placeholder="Confirm Password">
 
-                         <!-- Forgot password -->
-                         <p class="exttext">Forgot password? <a href="forget.html">Reset</a></p>
+                         <input class="btn" type="submit" name="submit" value="Reset Password">
+
                          <!-- Not have an account -->
                          <p class="exttext">Not have an account? <a href="register.html">Register</a></p>
+
+                         <!-- Have an account -->
+                         <p class="exttext">Already have an account? <a href="index.html">Login</a></p>
 
                     </form>
                </div>
