--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                <div class="project">
                     <h2 class="project-title ">Project 3</h2>
                     <p>Project 3 description</p>
-                    <a class="project-link" href="/Files/Project 3.html">View Project</a>
+                    <a class="project-link" href="/Files/Portfolio/index.html">View Project</a>
                </div>
           </div>
      </div>
