--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -59,13 +60,12 @@
                     font-size: 1rem;
                }
           }
-
- 
      </style>
      <title>All Projects</title>
 </head>
+
 <body>
-     
+
      <div class="main">
           <h1>All Projects</h1>
           <div class="projects">
@@ -78,11 +78,15 @@
                     <a class="project-link" href="/Files/LoginPage/index.html">View Project</a>
                </div>
                <div class="project">
-                    <h2 class="project-title ">Project 3</h2>
+                    <h2 class="project-title ">Portfolio</h2>
                     <a class="project-link" href="/Files/Portfolio/index.html">View Project</a>
+               </div>
+               <div class="project">
+                    <h2 class="project-title ">Home Page</h2>
+                    <a class="project-link" href="/Files/DevHomePage/index.html">View Project</a>
                </div>
           </div>
      </div>
-
 </body>
+
 </html>
