--- a/index.html
+++ b/index.html
@@ -7,25 +7,27 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <style>
           body {
-               background-color: #000;
-               color: #fff;
+               background-color: rgb(219, 213, 213);
+               color: black;
           }
 
           .projects {
                width: 100%;
-               height: 100vh;
                display: flex;
                justify-content: center;
                align-items: center;
+               flex-wrap: wrap;
           }
 
           .projects .project {
-               width: 100%;
+               box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+               width: 30%;
                height: 100%;
                display: flex;
                justify-content: center;
                align-items: center;
                flex-direction: column;
+               margin: 10px;
           }
 
           .projects .project .project-title {
@@ -48,16 +50,8 @@
 
           /* For mobiles */
           @media only screen and (max-width: 600px) {
-               .projects .project .project-title {
-                    font-size: 2rem;
-               }
-
-               .projects .project .project-description {
-                    font-size: 1rem;
-               }
-
-               .projects .project .project-link {
-                    font-size: 1rem;
+               .projects .project {
+                    width: 100%;
                }
           }
      </style>
@@ -85,8 +79,11 @@
                     <h2 class="project-title ">Home Page</h2>
                     <a class="project-link" href="/Files/DevHomePage/index.html">View Project</a>
                </div>
+               <div class="project">
+                    <h2 class="project-title ">Sunny Sahsi</h2>
+                    <a class="project-link" href="/Files/SimpleFolio/index.html">View Project</a>
+               </div>
           </div>
-     </div>
 </body>
 
 </html>
