some changes in design

--- a/Files/SimpleFolio/index.html
+++ b/Files/SimpleFolio/index.html
@@ -10,7 +10,7 @@
 <body>
      <nav>
           <div class="logo">
-               <h4>Sunny Sahsi</h4>
+               <a href="#">Sunny Sahsi</a>
           </div>
           <div class="links">
                <ul>
@@ -31,8 +31,9 @@
                </div>
                <div class="experience" id="experience">
                     <h2>Experience</h2>
+                    <hr class="line">
                     <div class="experience-item">
-                         <h3>Web Developer</h3>
+                         <h3></h3>
                          <h4>Freelance</h4>
                          <p>Currently working as a freelance web developer.</p>
                     </div>
@@ -49,6 +50,7 @@
                </div>
                <div class="projects">
                     <h2>Projects</h2>
+                    <hr class="line">
                     <div class="project-item">
                          <div class="left">
                               <img src="https://img.freepik.com/premium-vector/yellow-color-halftone-youtube-thumbnail-background_562076-95.jpg?w=2000"
@@ -109,6 +111,7 @@
                </div>
                <div class="stacks">
                     <h2>Tech Stack</h2>
+                    <hr class="line">
                     <div class="techstack">
 
                          <div class="stack">
