--- a/Files/SimpleFolio/index.html
+++ b/Files/SimpleFolio/index.html
@@ -4,6 +4,9 @@
 
 <head>
      <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+          integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
      <title>Sunny Sahsi</title>
 </head>
 
@@ -33,19 +36,19 @@
                     <h2>Experience</h2>
                     <hr class="line">
                     <div class="experience-item">
-                         <h3></h3>
-                         <h4>Freelance</h4>
-                         <p>Currently working as a freelance web developer.</p>
+                         <h3>VIEH GROUP</h3>
+                         <h4>Cyber Security Engineer(Intern)</h4>
+                         <p>Working on two project ”Website Scrapper” and ”Bug Bounty Automaton” tools.</p>
+                         <p>Website Scrapper in Python and Bug Bounty Automation tools in BASH.</p>
+                         <p>Push code on GitHub and create project report DPR, HLD, LLD, PID etc.</p>
                     </div>
                     <div class="experience-item">
-                         <h3>Web Developer</h3>
-                         <h4>Freelance</h4>
-                         <p>Currently working as a freelance web developer.</p>
-                    </div>
-                    <div class="experience-item">
-                         <h3>Web Developer</h3>
-                         <h4>Freelance</h4>
-                         <p>Currently working as a freelance web developer.</p>
+                         <h3>SMARTINTERNZ</h3>
+                         <h4>Android Developer(Externship)</h4>
+                         <p>Worked with Kotlin in Android Development</p>
+                         <p>Designed graphics and UX using material design</p>
+                         <p>Understanding using of proper colors, spacing and fonts</p>
+                         <p>Created project ”Grocery App”</p>
                     </div>
                </div>
                <div class="projects">
@@ -53,14 +56,31 @@
                     <hr class="line">
                     <div class="project-item">
                          <div class="left">
-                              <img src="https://img.freepik.com/premium-vector/yellow-color-halftone-youtube-thumbnail-background_562076-95.jpg?w=2000"
-                                   alt="Project 1">
+                              <img src="images/xprobba.png" alt="xProBBA">
                          </div>
                          <div class="right">
-                              <h3>Project 1</h3>
-                              <p>Project description</p>
+                              <h3>XPROBBA</h3>
+                              <p>Bug Bounty Automaton</p>
                               <div class="tags">
-                                   <span>HTML</span>
+                                   <span>BASH</span>
+                                   <span>Nmap</span>
+                                   <span>Python</span>
+                              </div>
+                              <div class="btns">
+                                   <a href="https://github.com/sahsisunny/xProBBA" target="_blank"
+                                        class="btn2">Github</a>
+                              </div>
+                         </div>
+                    </div>
+                    <div class="project-item">
+                         <div class="left">
+                              <img src="images/xprobba.png" alt="WEbsite Scrapper">
+                         </div>
+                         <div class="right">
+                              <h3>WEBSITE SCRAPPER</h3>
+                              <p>Extract Data from Flipkart, Twitter</p>
+                              <div class="tags">
+                                   <span>Python</span>
                                    <span>CSS</span>
                                    <span>JavaScript</span>
                               </div>
@@ -72,31 +92,11 @@
                     </div>
                     <div class="project-item">
                          <div class="left">
-                              <img src="https://img.freepik.com/premium-vector/yellow-color-halftone-youtube-thumbnail-background_562076-95.jpg?w=2000"
-                                   alt="Project 1">
+                              <img src="images/coogle.png" alt="Coogle">
                          </div>
                          <div class="right">
-                              <h3>Project 1</h3>
-                              <p>Project description</p>
-                              <div class="tags">
-                                   <span>HTML</span>
-                                   <span>CSS</span>
-                                   <span>JavaScript</span>
-                              </div>
-                              <div class="btns">
-                                   <a href="#" target="_blank" class="btn2">Github</a>
-                                   <a href="#" target="_blank" class="btn2">Live</a>
-                              </div>
-                         </div>
-                    </div>
-                    <div class="project-item">
-                         <div class="left">
-                              <img src="https://img.freepik.com/premium-vector/yellow-color-halftone-youtube-thumbnail-background_562076-95.jpg?w=2000"
-                                   alt="Project 1">
-                         </div>
-                         <div class="right">
-                              <h3>Project 1</h3>
-                              <p>Project description</p>
+                              <h3>Coogle</h3>
+                              <p>Google Search Page Clone</p>
                               <div class="tags">
                                    <span>HTML</span>
                                    <span>CSS</span>
@@ -116,71 +116,95 @@
 
                          <div class="stack">
                               <!-- Brand Logo -->
-                              <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub">
-                              <p>Github</p>
+                              <img src="images/skill_logo/html.png" alt="GitHub">
+                              <p>HTML</p>
                          </div>
                          <div class="stack">
                               <!-- Brand Logo -->
-                              <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub">
-                              <p>Github</p>
+                              <img src="images/skill_logo/css.png" alt=" GitHub">
+                              <p>CSS</p>
                          </div>
                          <div class="stack">
                               <!-- Brand Logo -->
-                              <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub">
-                              <p>Github</p>
+                              <img src="images/skill_logo/js.png" alt=" GitHub">
+                              <p>JavaScript</p>
                          </div>
                          <div class="stack">
                               <!-- Brand Logo -->
-                              <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub">
-                              <p>Github</p>
+                              <img src="images/skill_logo/bootstrap.png" alt=" GitHub">
+                              <p>BootStrap</p>
                          </div>
                          <div class="stack">
                               <!-- Brand Logo -->
-                              <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub">
-                              <p>Github</p>
+                              <img src="images/skill_logo/node.png" alt=" GitHub">
+                              <p>NodeJS</p>
                          </div>
                          <div class="stack">
                               <!-- Brand Logo -->
-                              <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub">
-                              <p>Github</p>
+                              <img src="images/skill_logo/react.png" alt=" GitHub">
+                              <p>ReactJS</p>
                          </div>
                          <div class="stack">
                               <!-- Brand Logo -->
-                              <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub">
-                              <p>Github</p>
+                              <img src="images/skill_logo/mongodb.png" alt=" GitHub">
+                              <p>MongoDB</p>
                          </div>
                          <div class="stack">
                               <!-- Brand Logo -->
-                              <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub">
-                              <p>Github</p>
+                              <img src="images/skill_logo/express.png" alt=" GitHub">
+                              <p>ExpressJS</p>
                          </div>
                          <div class="stack">
                               <!-- Brand Logo -->
-                              <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub">
-                              <p>Github</p>
+                              <img src="images/skill_logo/linux.png" alt=" GitHub">
+                              <p>Linux</p>
                          </div>
                          <div class="stack">
                               <!-- Brand Logo -->
-                              <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub">
-                              <p>Github</p>
+                              <img src="images/skill_logo/github.png" alt=" GitHub">
+                              <p>GitHub</p>
+                         </div>
+                         <div class="stack">
+                              <!-- Brand Logo -->
+                              <img src="images/skill_logo/bash.png" alt=" GitHub">
+                              <p>BASH</p>
+                         </div>
+                         <div class="stack">
+                              <!-- Brand Logo -->
+                              <img src="images/skill_logo/python.png" alt=" GitHub">
+                              <p>Python</p>
+                         </div>
+                         <div class="stack">
+                              <!-- Brand Logo -->
+                              <img src="images/skill_logo/java.png" alt=" GitHub">
+                              <p>Java</p>
+                         </div>
+                         <div class="stack">
+                              <!-- Brand Logo -->
+                              <img src="images/skill_logo/bash.png" alt=" GitHub">
+                              <p>BASH</p>
+                         </div>
+                         <div class="stack">
+                              <!-- Brand Logo -->
+                              <img src="images/skill_logo/vscode.png" alt=" GitHub">
+                              <p>VS Code</p>
+                         </div>
+                         <div class="stack">
+                              <!-- Brand Logo -->
+                              <img src="images/skill_logo/android.png" alt=" GitHub">
+                              <p>Android</p>
                          </div>
                     </div>
                </div>
                <div class="contact" id="contact">
-                    <h2>Contact</h2>
-                    <div class="contact-item">
-                         <div class="left2">
-                              <img src="https://www.nicepng.com/png/detail/70-700924_contact-us-png-contact.png"
-                                   alt="Contact">
-                         </div>
-                         <div class="right2">
-                              <h3>Get in touch</h3>
-                              <p>Feel free to contact me for any work or suggestions below</p>
-                              <div class="btns">
-                                   <a href="mailto:sahsisunny@gmail.com" target="_blank" class="btn">Email</a>
-                                   <a href="https://www.linkedin.com/in/sunny-sahsi-1b1b4b1b4/" target="_blank"
-                                        class="btn">LinkedIn</a>
-                              </div>
+                    <h2>Get in Touch</h2>
+                    <hr class="line">
+                    <div class="getintouch">
+                         <div class="getintouch">
+                              <a href="#" target="_blank" class="iconbtn"><i class="fa-brands fa-linkedin"></i></a>
+                              <a href="#" target="_blank" class="iconbtn"><i class="fa-brands fa-twitter"></i></a>
+                              <a href="#" target="_blank" class="iconbtn"><i class="fa-brands fa-github"></i></a>
+                              <a href="#" target="_blank" class="iconbtn"><i class="fa-brands fa-instagram"></i></a>
                          </div>
                     </div>
                </div>
@@ -188,7 +212,9 @@
 
      </main>
      <footer>
-
+          <div class="footer">
+               <p>Designed and Developed by Sunny Sahsi</p>
+          </div>
      </footer>
 
 </body>
