--- a/Files/SimpleFolio/index.html
+++ b/Files/SimpleFolio/index.html
@@ -18,19 +18,51 @@
           <div class="links">
                <ul>
                     <li><a href="#intro">Home</a></li>
-                    <li><a href="#experience">About</a></li>
+                    <li><a href="#education">Education</a></li>
+                    <li><a href="#experience">Experience</a></li>
+                    <li><a href="#experience">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <!-- For dark mode -->
-                    <li><a href="#">Dark</a></li>
                </ul>
           </div>
      </nav>
      <main>
           <div>
+
                <div class="intro" id="intro">
                     <h1>Hi, I'm <span class="name">Sunny Sahsi</span></h1>
                     <p>I'm a web developer based in Patna, Bihar.</p>
                     <a href="resume.pdf" target="_blank" class="btn">Resume</a>
+               </div>
+
+               <div class="education" id="education">
+                    <h2>Education</h2>
+                    <hr class="line">
+                    <div class="edu">
+                         <div class="eduleft">
+                              <div class="image">
+                                   <img src="images/pu.png" alt="Bihar National College">
+                              </div>
+                         </div>
+                         <div class="eduright">
+                              <div class="clgname">
+                                   <div class="lef">
+                                        <p class="clg">Bihar National College, Patna University</p>
+                                        <p>Bachelor in Computer Application</p>
+                                   </div>
+                                   <div class="rig">
+                                        <p>2019-2022</p>
+                                   </div>
+                              </div>
+                              <div class="info">
+                                   <p>📚 I have studied basic software engineering subjects like DS, Algorithms, DBMS,
+                                        OS, CA, AI etc.</p>
+                                   <p>⚡ Apart from this, I have done courses on Data Science, Cloud Computing and Full
+                                        Stack Development.</p>
+                                   <p>🏅 I have scored 8.5 CGPA in my BCA.</p>
+
+                              </div>
+                         </div>
+                    </div>
                </div>
                <div class="experience" id="experience">
                     <h2>Experience</h2>
