add certificate photos

--- a/Files/SimpleFolio/index.html
+++ b/Files/SimpleFolio/index.html
@@ -63,7 +63,81 @@
                               </div>
                          </div>
                     </div>
+
+                    <!-- Certificate Section -->
+                    <div class="certificate">
+                         <h2>Certifications</h2>
+                         <hr class="line">
+                         <div class="certi">
+
+                              <div class="certificate-item">
+                                   <div class="certificate-image">
+                                        <img src="images/cetifications/android.png" alt="certificate">
+                                   </div>
+                                   <div class="certificate-info">
+                                        <p class="course-name">Android Development</p>
+                                        <p class="provider">-SmartInternz</p>
+                                   </div>
+                              </div>
+                              <div class="certificate-item">
+                                   <div class="certificate-image">
+                                        <img src="images/cetifications/python.png" alt="certificate">
+                                   </div>
+                                   <div class="certificate-info">
+                                        <p class="course-name">Python</p>
+                                        <p class="provider">-GUVI</p>
+                                   </div>
+                              </div>
+                              <div class="certificate-item">
+                                   <div class="certificate-image">
+                                        <img src="images/cetifications/linux.png" alt="certificate">
+                                   </div>
+                                   <div class="certificate-info">
+                                        <p class="course-name">Linux</p>
+                                        <p class="provider">-Great Learning</p>
+                                   </div>
+                              </div>
+                              <div class="certificate-item">
+                                   <div class="certificate-image">
+                                        <img src="images/cetifications/cyber.png" alt="certificate">
+                                   </div>
+                                   <div class="certificate-info">
+                                        <p class="course-name">Cyber Security</p>
+                                        <p class="provider">-CertiProf</p>
+                                   </div>
+                              </div>
+                              <div class="certificate-item">
+                                   <div class="certificate-image">
+                                        <img src="images/cetifications/ethicalhacker.png" alt="certificate">
+                                   </div>
+                                   <div class="certificate-info">
+                                        <p class="course-name">Ethical Hacking</p>
+                                        <p class="provider">-Bitten Tech</p>
+                                   </div>
+                              </div>
+                              <div class="certificate-item">
+                                   <div class="certificate-image">
+                                        <img src="images/cetifications/bash.png" alt="certificate">
+                                   </div>
+                                   <div class="certificate-info">
+                                        <p class="course-name">Bash Script</p>
+                                        <p class="provider">-Bitten Tech</p>
+                                   </div>
+                              </div>
+                              <div class="certificate-item">
+                                   <div class="certificate-image">
+                                        <img src="images/cetifications/faceapp.png" alt="certificate">
+                                   </div>
+                                   <div class="certificate-info">
+                                        <p class="course-name">Build FRA in Python</p>
+                                        <p class="provider">-GUVI</p>
+                                   </div>
+                              </div>
+
+                         </div>
+                    </div>
                </div>
+               <!-- Experience Section -->
                <div class="experience" id="experience">
                     <h2>Experience</h2>
                     <hr class="line">
@@ -88,7 +162,7 @@
                     <hr class="line">
                     <div class="project-item">
                          <div class="left">
-                              <img src="images/xprobba.png" alt="xProBBA">
+                              <img src="images/project/xprobba.png" alt="xProBBA">
                          </div>
                          <div class="right">
                               <h3>XPROBBA</h3>
@@ -106,7 +180,7 @@
                     </div>
                     <div class="project-item">
                          <div class="left">
-                              <img src="images/xprobba.png" alt="WEbsite Scrapper">
+                              <img src="images/project/websitescrapper.png" alt="WEbsite Scrapper">
                          </div>
                          <div class="right">
                               <h3>WEBSITE SCRAPPER</h3>
@@ -124,7 +198,7 @@
                     </div>
                     <div class="project-item">
                          <div class="left">
-                              <img src="images/coogle.png" alt="Coogle">
+                              <img src="images/project/coogle.png" alt="Coogle">
                          </div>
                          <div class="right">
                               <h3>Coogle</h3>
