buttons added in project section

--- a/Files/SimpleFolio/index.html
+++ b/Files/SimpleFolio/index.html
@@ -175,6 +175,8 @@
                               <div class="btns">
                                    <a href="https://github.com/sahsisunny/xProBBA" target="_blank"
                                         class="btn2">Github</a>
+                                   <a href="https://www.youtube.com/watch?v=M4c0uWheyvY" target="_blank"
+                                        class="btn2">Live</a>
                               </div>
                          </div>
                     </div>
@@ -191,8 +193,10 @@
                                    <span>JavaScript</span>
                               </div>
                               <div class="btns">
-                                   <a href="#" target="_blank" class="btn2">Github</a>
-                                   <a href="#" target="_blank" class="btn2">Live</a>
+                                   <a href="https://github.com/sahsisunny/Website-Scrapper-Project" target="_blank"
+                                        class="btn2">Github</a>
+                                   <a href="https://www.youtube.com/watch?v=xlX0bZGo5lM" target="_blank"
+                                        class="btn2">Live</a>
                               </div>
                          </div>
                     </div>
@@ -209,8 +213,9 @@
                                    <span>JavaScript</span>
                               </div>
                               <div class="btns">
-                                   <a href="#" target="_blank" class="btn2">Github</a>
-                                   <a href="#" target="_blank" class="btn2">Live</a>
+                                   <a href="https://github.com/sahsisunny/coogle" target="_blank"
+                                        class="btn2">Github</a>
+                                   <a href="https://coooogle.netlify.app/" target="_blank" class="btn2">Live</a>
                               </div>
                          </div>
                     </div>
