add script file and some modification in animation

--- a/Files/SimpleFolio/index.html
+++ b/Files/SimpleFolio/index.html
@@ -17,10 +17,10 @@
           </div>
           <div class="links">
                <ul>
-                    <li><a href="#intro">Home</a></li>
                     <li><a href="#education">Education</a></li>
+                    <li><a href="#education">Certifications</a></li>
                     <li><a href="#experience">Experience</a></li>
-                    <li><a href="#experience">Projects</a></li>
+                    <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                </ul>
           </div>
@@ -40,7 +40,7 @@
                     <div class="edu">
                          <div class="eduleft">
                               <div class="image">
-                                   <img src="images/pu.png" alt="Bihar National College">
+                                   <img  id="pulogo" src="images/pu.png" alt="Bihar National College">
                               </div>
                          </div>
                          <div class="eduright">
@@ -226,82 +226,66 @@
                     <div class="techstack">
 
                          <div class="stack">
-                              <!-- Brand Logo -->
                               <img src="images/skill_logo/html.png" alt="GitHub">
                               <p>HTML</p>
                          </div>
                          <div class="stack">
-                              <!-- Brand Logo -->
                               <img src="images/skill_logo/css.png" alt=" GitHub">
                               <p>CSS</p>
                          </div>
                          <div class="stack">
-                              <!-- Brand Logo -->
-                              <img src="images/skill_logo/js.png" alt=" GitHub">
+                              <img src="images/skill_logo/js.png" alt="GitHub">
                               <p>JavaScript</p>
                          </div>
                          <div class="stack">
-                              <!-- Brand Logo -->
                               <img src="images/skill_logo/bootstrap.png" alt=" GitHub">
                               <p>BootStrap</p>
                          </div>
                          <div class="stack">
-                              <!-- Brand Logo -->
                               <img src="images/skill_logo/node.png" alt=" GitHub">
                               <p>NodeJS</p>
                          </div>
                          <div class="stack">
-                              <!-- Brand Logo -->
                               <img src="images/skill_logo/react.png" alt=" GitHub">
                               <p>ReactJS</p>
                          </div>
                          <div class="stack">
-                              <!-- Brand Logo -->
                               <img src="images/skill_logo/mongodb.png" alt=" GitHub">
                               <p>MongoDB</p>
                          </div>
                          <div class="stack">
-                              <!-- Brand Logo -->
                               <img src="images/skill_logo/express.png" alt=" GitHub">
                               <p>ExpressJS</p>
                          </div>
                          <div class="stack">
-                              <!-- Brand Logo -->
                               <img src="images/skill_logo/linux.png" alt=" GitHub">
                               <p>Linux</p>
                          </div>
                          <div class="stack">
-                              <!-- Brand Logo -->
                               <img src="images/skill_logo/github.png" alt=" GitHub">
                               <p>GitHub</p>
                          </div>
                          <div class="stack">
-                              <!-- Brand Logo -->
                               <img src="images/skill_logo/bash.png" alt=" GitHub">
                               <p>BASH</p>
                          </div>
                          <div class="stack">
-                              <!-- Brand Logo -->
                               <img src="images/skill_logo/python.png" alt=" GitHub">
                               <p>Python</p>
                          </div>
                          <div class="stack">
-                              <!-- Brand Logo -->
                               <img src="images/skill_logo/java.png" alt=" GitHub">
                               <p>Java</p>
                          </div>
                          <div class="stack">
-                              <!-- Brand Logo -->
                               <img src="images/skill_logo/bash.png" alt=" GitHub">
                               <p>BASH</p>
                          </div>
                          <div class="stack">
-                              <!-- Brand Logo -->
                               <img src="images/skill_logo/vscode.png" alt=" GitHub">
                               <p>VS Code</p>
                          </div>
                          <div class="stack">
-                              <!-- Brand Logo -->
                               <img src="images/skill_logo/android.png" alt=" GitHub">
                               <p>Android</p>
                          </div>
@@ -327,6 +311,8 @@
                <p>Designed and Developed by Sunny Sahsi</p>
           </div>
      </footer>
+
+     <script src="script.js"></script>
 
 </body>
 
