--- a/Files/SimpleFolio/index.html
+++ b/Files/SimpleFolio/index.html
@@ -3,26 +3,46 @@
 
 
 <head>
-     <link rel="stylesheet" href="style.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
           integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
           crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+     <link rel="stylesheet" href="style.css">
+
+
      <title>Sunny Sahsi</title>
 </head>
 
 <body>
-     <nav>
-          <div class="logo">
-               <a href="#">Sunny Sahsi</a>
-          </div>
-          <div class="links">
-               <ul>
-                    <li><a href="#education">Education</a></li>
-                    <li><a href="#education">Certifications</a></li>
-                    <li><a href="#experience">Experience</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
-               </ul>
+     <nav class="navbar navbar-expand-lg ">
+          <div class="container-fluid">
+               <div class="logo">
+                    <a href="#">Sunny Sahsi</a>
+               </div>
+               <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+               </button>
+               <div class="collapse navbar-collapse links" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-3 mb-lg-0 links">
+                         <li class="nav-item"><a class="nav-link active" aria-current="page"
+                                   href="#education">Education</a>
+                         </li>
+                         <li class="nav-item"><a class="nav-link active" aria-current="page"
+                                   href="#education">Certifications</a></li>
+                         <li class="nav-item"><a class="nav-link active" aria-current="page"
+                                   href="#experience">Experience</a></li>
+                         <li class="nav-item"><a class="nav-link active" aria-current="page"
+                                   href="#projects">Projects</a>
+                         </li>
+                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#contact">Contact</a>
+                         </li>
+                    </ul>
+               </div>
           </div>
      </nav>
      <main>
@@ -40,7 +60,7 @@
                     <div class="edu">
                          <div class="eduleft">
                               <div class="image">
-                                   <img  id="pulogo" src="images/pu.png" alt="Bihar National College">
+                                   <img id="pulogo" src="images/pu.png" alt="Bihar National College">
                               </div>
                          </div>
                          <div class="eduright">
