--- a/Files/SimpleFolio/index.html
+++ b/Files/SimpleFolio/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+     <!-- NavBar Start -->
      <nav class="navbar navbar-expand-lg ">
           <div class="container-fluid">
                <div class="logo">
@@ -44,14 +45,16 @@
                </div>
           </div>
      </nav>
+     <!-- NavBar End -->
      <main>
           <div>
-
+               <!-- Intro Start -->
                <div class="intro" id="intro">
                     <h1>Hi, I'm <span class="name">Sunny Sahsi</span></h1>
                     <p>I'm a web developer based in Patna, Bihar.</p>
                     <a href="resume.pdf" target="_blank" class="btn">Resume</a>
                </div>
+               <!-- Intro End -->
 
                <div class="education" id="education">
                     <h2>Education</h2>
@@ -176,6 +179,8 @@
                          <p>Created project ”Grocery App”</p>
                     </div>
                </div>
+
+               <!-- Project Section -->
                <div class="projects">
                     <h2>Projects</h2>
                     <hr class="line">
